# vitrae-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Docs/: Task-pipelines.md
Showcase/: CMakeLists.txt
Showcase/forms/: Settings.ui
Showcase/src/: SettingsWindow.cpp  SettingsWindow.h  Status.cpp  Status.hpp  assetCollection.cpp  assetCollection.hpp  classicShading.cpp  classicShading.hpp  main.cpp  methodCollection.cpp  methodCollection.hpp  methodsClassic.cpp  methodsClassic.hpp  shadingModes.cpp  shadingModes.hpp  shadingOverrider.cpp  shadingOverrider.hpp
Showcase/src/Methods/: abstract.cpp  abstract.hpp  classic.hpp  shadowEBR.hpp  shadowPCF.hpp
VitraeEngine/: CMakeLists.txt
VitraeEngine/include/Vitrae/: ComponentRoot.h  ComponentRoot.hpp  Material.h  Mesh.h  Model.h  Plugin.h  Plugin.hpp  Renderer.h  Renderer.hpp  ResourceManager.h  ResourceRoot.h  Scene.h  Texture.h
VitraeEngine/include/Vitrae/Assets/: FrameStore.hpp  Material.h  Material.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  Shader.h  Shader.hpp  SharedBuffer.hpp  SurfaceShader.hpp  Texture.h  Texture.hpp
VitraeEngine/include/Vitrae/Assets/GenericTaskSteps/: Group.h  Switch.h
VitraeEngine/include/Vitrae/Pipelines/: Filter.h  Filter.hpp  Group.h  Group.hpp  Method.hpp  Pipeline.hpp  Switch.h  Switch.hpp  Task.h  Task.hpp
VitraeEngine/include/Vitrae/Pipelines/Compositing/: ClearRender.hpp  Constant.hpp  FrameToTexture.hpp  Function.hpp  SceneRender.hpp  Task.hpp
VitraeEngine/include/Vitrae/Pipelines/Rendering/: Filter.hpp  Group.hpp  Switch.hpp  Task.hpp
VitraeEngine/include/Vitrae/Pipelines/Shading/: Constant.hpp  Filter.hpp  Function.hpp  Group.hpp  Switch.hpp  Task.hpp
VitraeEngine/include/Vitrae/Renderers/: OpenGL.h  OpenGL.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/: FrameStore.hpp  Mesh.h  Mesh.hpp  Shader.h  Shader.hpp  ShaderCompilation.hpp  SharedBuffer.hpp  Texture.h  Texture.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/Compositing/: ClearRender.hpp  SceneRender.hpp
VitraeEngine/include/Vitrae/Renderers/OpenGL/Shading/: Constant.hpp  Function.hpp  Task.hpp
VitraeEngine/include/Vitrae/ResourceManagers/: Simple.h
VitraeEngine/include/Vitrae/Resources/: Material.h  Mesh.h  Model.h  Shader.h  ShaderStep.h  Texture.h
VitraeEngine/include/Vitrae/Resources/GenericTaskSteps/: Group.h  Switch.h
VitraeEngine/include/Vitrae/Resources/ShaderSteps/: Group.h  Source.h  Switch.h
VitraeEngine/include/Vitrae/TypeConversion/: AssimpTypeConvert.h  AssimpTypeConvert.hpp  GLTypeInfo.hpp  StringConvert.h  StringConvert.hpp  VectorInfo.h  VectorTypeInfo.hpp
VitraeEngine/include/Vitrae/Types/: GraphicPrimitives.h  Transformation.h  Transformation.hpp  Typedefs.h  UniqueAnyPtr.h  UniqueAnyPtr.hpp
VitraeEngine/include/Vitrae/Util/: AssimpTypeConvert.h  GLTypeInfo.h  GraphicPrimitives.h  Hashing.hpp  NonCopyable.h  NonCopyable.hpp  Property.h  Property.hpp  PropertyList.hpp  RefCounted.h  ScopedDict.hpp  StableMap.hpp  StringConvert.h  StringId.h  StringId.hpp  StringProcessing.hpp  Types.h  UniqueCtr.h  UniqueId.h  UniqueId.hpp  Variant.hpp  VectorInfo.h
VitraeEngine/include/Vitrae/Visuals/: Compositor.hpp  Scene.hpp
VitraeEngine/src/: ComponentRoot.cpp  Model.cpp  ResourceRoot.cpp
VitraeEngine/src/Assets/: Material.cpp  Model.cpp  Shader.cpp  SharedBuffer.cpp
VitraeEngine/src/Pipelines/Compositing/: Constant.cpp  FrameToTexture.cpp  Function.cpp
VitraeEngine/src/Pipelines/Rendering/: Filter.cpp  Group.cpp  Switch.cpp
VitraeEngine/src/Renderers/: OpenGL.cpp
VitraeEngine/src/Renderers/OpenGL/: FrameStore.cpp  Mesh.cpp  Shader.cpp  ShaderCompilation.cpp  SharedBuffer.cpp  Texture.cpp
VitraeEngine/src/Renderers/OpenGL/Compositing/: ClearRender.cpp  SceneRender.cpp
VitraeEngine/src/Renderers/OpenGL/Shading/: Constant.cpp  Function.cpp
VitraeEngine/src/Resources/: Model.cpp
VitraeEngine/src/Resources/ShaderSteps/: Group.cpp  Source.cpp  Switch.cpp
VitraeEngine/src/Util/: ScopedDict.cpp  StringId.cpp  StringProcessing.cpp
VitraeEngine/src/Visuals/: Compositor.cpp  Scene.cpp
